editted some stuff

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>Berke Muftuoglu</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css"/>
+		<link rel="stylesheet" href="assets/css/mfizz/font-mfizz.css">
 	</head>
 	<body class="is-preload">
 
@@ -17,9 +18,8 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Willis Corto</a></h1>
-					<p>I got reprogrammed by a rogue AI<br />
-					and now I'm totally cray</p>
+					<h1 id="logo"><a href="#">Berke Muftuoglu</a></h1>
+					<p>Computer Science Student<br/>Software Engineer in the making</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -53,26 +53,45 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
-										<p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										<h2>About Me</h2>
+										<p>Welcome to my simple personal website :)</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>
+										Hello, first of all thank you for checking out my personal website.
+										I am a Computer Science Student at King's College London currently studying at a 3rd year level.
+										In this website I will be telling you a bit about myself and what I do.
+										</br> </br>
+										My interest in engineering startes when I was in high school when I enrolled to International Baccalaureate (IB) program. 
+										IB is equliaent to A-levels in the UK and it is a very challenging program. I undertook Maths, Computer Science and Economics
+										at higher level; and English, Turkish and Biology at standard level. Then I persued a degree in Computer Science at King's College London.
+										</br> </br>
+										I have started my studies in 2020 and I have been in London ever since. Since I started studying, I have undertook courses that enhanced my knowledge in
+										software developement. My courses allowed me to explore diffrent ranges of software including low-level programs like Operating Systems to high-level programms like 
+										Web developement. During this time I also focused on my self development as a developer and built open what's though in school. Below you may find more details about my
+										technical expertise.
+
+									</p>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<h3>Techincal Expertise</h3>
+									<p>Here a few programming langauges I have expreince in:</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Write all the code</li>
-										<li class="icon solid fa-cubes">Stack small boxes</li>
-										<li class="icon solid fa-book">Read books and stuff</li>
-										<li class="icon solid fa-coffee">Drink much coffee</li>
-										<li class="icon solid fa-bolt">Lightning bolt</li>
-										<li class="icon solid fa-users">Shadow clone technique</li>
+										<li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" width="200" height="40"/></li>
+										<li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" width="200" height="40"/> </li>
+										<li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" width="200" height="40"/></li>
+										<li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/haskell/haskell-original.svg" width="200" height="40"/></li>
+
+										<!--<li class="icon-cplusplus fa-2x"></li>
+										<li class="icon-python fa-2x"></li>
+										<li class="icon-java fa-2x"></li>
+										<li class="icon-csharp fa-2x"></li>
+										<li class="icon-haskell fa-2x"></li>
+										<li class="icon-scala fa-2x"></li>-->
+										
 									</ul>
 								</div>
 							</section>
