some more changes

--- a/index.html
+++ b/index.html
@@ -26,15 +26,14 @@
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Things I Can Do</a></li>
 						<li><a href="#three">Experience</a></li>
+						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://github.com/berkemuftuoglu" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/berke-muftuoglu-b1533517b/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+
 					</ul>
 				</footer>
 			</section>
@@ -53,23 +52,22 @@
 									</header>
 									<h2>Background</h2>
 									<p>
-										Hello and welcome to my simple personal website :) first of all thank you for checking out my personal website.
-										I am a Computer Science Student at King's College London currently studying at a 3rd year level.
-										In this website I will be telling you a bit about myself and what I do.
+										Hello and welcome to my simple personal website :) first of all, thank you for checking out my personal website. 
+										I am a Computer Science Student at King's College London currently studying at a 3rd-year level. 
+										On this website I will be telling you a bit about myself and what I do. 
 										</br> </br>
-										My interest in engineering startes when I was in high school when I enrolled to International Baccalaureate (IB) program. 
-										IB is equliaent to A-levels in the UK and it is a very challenging program. I undertook Maths, Computer Science and Economics
-										at higher level; and English, Turkish and Biology at standard level. Then I persued a degree in Computer Science at King's College London.
+										My interest in engineering started when I was in high school when I enrolled in International Baccalaureate (IB) program. 
+										IB is equivalent to A-levels in the UK and it is a very challenging program. I undertook Maths, Computer Science, and Economics at a higher level; and English, Turkish, and Biology at a standard level. 
+										Then I pursued a degree in Computer Science at King's College London. 
 										</br> </br>
-										I have started my studies in 2020 and I have been in London ever since. Since I started studying, I have undertook courses that enhanced my knowledge in
-										software developement. My courses allowed me to explore diffrent ranges of software including low-level programs like Operating Systems to high-level programms like 
-										Web developement. During this time I also focused on my self development as a developer and built open what's though in school. Below you may find more details about my
-										technical expertise.
+										I started my studies in 2020 and have been in London ever since. Since I started studying, I have undertaken courses that enhanced my knowledge of software development. 
+										My classes allowed me to explore different ranges of software including low-level programs like Operating Systems to high-level programs like Web development. 
+										During this time I also focused on my self-development as a developer and built open what's thought in school. Below you may find more details about my technical expertise.
 										<h2>My Passion</h2>
-										My amibition is building stuff and solving engineering problems. I like building things from scratch and I am always looking for new challenges. It is not necceserially software
-										I enjoy the process of learning a set of rules, syntaxes and ways of doing things to produce a product of my own. My ultimate goal is to become a independent of programming languages and build
-										whatever I want it using any programming language I want. This mentality allows me to adapt to new techonologies really fast, learn quickly and most importantly it thought me how to learn new things 
-										Whatever way is the most practical and effective way to do something, I will find it.
+										My ambition is to build stuff and solve engineering problems. I like building things from scratch and I am always looking for new challenges. 
+										It is not necessarily software I enjoy the process of learning a set of rules, syntaxes, and ways of doing things to produce a product of my own. 
+										My ultimate goal is to become independent of programming languages and build whatever I want it using any programming language I want. This mentality allows me to adapt to new technologies really fast, learn quickly, 
+										and most importantly it thought me how to learn new things whatever way is the most practical and effective way to do something, I will find it. 
 										<br></br>
 										<i>Ps: I used a HTML template and github-pages to build this website.</i>
 									</p>
@@ -141,6 +139,14 @@
 												</p>
 											</div>
 									</div>
+								</div>
+							</section>
+
+							<!-- Four -->
+							<section id="four">
+								<div class="container">
+									<h2>Contact</h2>
+									<p>If you wish to contact me please send me an email at <a href="mailto:erke.muftuoglu@kcl.ac.uk">berke.muftuoglu@kcl.ac.uk </a></p>
 								</div>
 							</section>
 
