--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Masters</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>berkemuftuoglu1@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>berke.muftuoglu.23@ucl.ac.uk</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Remote:</strong> <span></span>Yes</li>
                 </ul>
               </div>
