--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <img src="assets/img/bitmoji.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Berke Muftuoglu</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.linkedin.com/in/berkemuftuoglu/" class="github"><i class="bx bxl-github"></i></a>
-          <a href="https://github.com/berkemuftuoglu" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/berkemuftuoglu" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://www.linkedin.com/in/berkemuftuoglu/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
