Adding projecets section, opened the Portfolio Section

--- a/index.html
+++ b/index.html
@@ -285,14 +285,13 @@
                     <li>Contributed to the documentation of the new system as part of a 5-member software engineering team.</li>
                     <li>Migrated over 1 million data entries on production using tools like DataGrip, SQL, and RabbitMQ.</li>
                 </ul>
-            </div>            
+            </div>
           </div>
         </div>
       </div>
 
     </section><!-- End Resume Section -->
 
-    <!-- ======= Portfolio Section =======
     <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
@@ -308,7 +307,10 @@
               <li data-filter=".filter-app">App</li>
               <li data-filter=".filter-card">Card</li>
               <li data-filter=".filter-web">Web</li>
-            </ul>
+              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-web">Web</li>
+            </ul><s></s>
           </div>
         </div>
 
@@ -316,9 +318,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/bitmoji.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/bitmoji.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -407,9 +409,10 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section>
 
-    <!-- ======= Services Section =======
+    <!-- ======= Services Section ======= -->
+    <!--
     <section id="services" class="services">
       <div class="container">
 
@@ -452,10 +455,9 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section>
+    -->
 
-
-    <!-- ======= Testimonials Section ======= -->
     <!--
     <section id="testimonials" class="testimonials section-bg">
       <div class="container">
@@ -540,7 +542,6 @@
       </div>
     </section>
     -->
-    <!-- End Testimonials Section -->
 
 
   </main><!-- End #main -->
