--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <title>ERDEM</title>
+  <title>SAMSUNG 70CU7100 70'' 4K UHD Smart TV | MediaMarkt</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
